argocd/projects/mrscraper/app/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: mrscraper
spec:
  selector:
    app: web
  ports:
    - port: 80
      targetPort: 3000
  type: LoadBalancer
